--- a/sistema-votacion/build.gradle
+++ b/sistema-votacion/build.gradle
@@ -29,6 +29,10 @@ dependencies {
     implementation 'org.apache.commons:commons-csv:1.8'
     implementation 'org.slf4j:slf4j-api:1.7.30'
     implementation 'ch.qos.logback:logback-classic:1.2.3'
+    
+    // SQLite para el ServidorRegional
+    implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
+    
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
 }
@@ -82,5 +86,14 @@ task runDatabase(type: JavaExec) {
     main = 'com.registraduria.votacion.database.DatabaseProxyApp'
     classpath = sourceSets.main.runtimeClasspath
     args = ["--config", "src/main/resources/config/database.config"]
+    standardInput = System.in
+}
+
+task runRegional(type: JavaExec) {
+    group = "application"
+    description = "Ejecuta el Servidor Regional"
+    main = 'com.registraduria.votacion.regional.ServidorRegionalApp'
+    classpath = sourceSets.main.runtimeClasspath
+    args = ["--config", "src/main/resources/config/regional.config"]
     standardInput = System.in
 }
